# rtu-mirea-schedule-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  runserver.py
src/app/: config.py  main.py  types.py
src/app/connectors/: __init__.py  base_connectors.py  httpx_async.py  schedule.py
src/app/parsers/: __init__.py  ical.py
src/app/routers/: __init__.py  schedule.py  search.py
src/app/schemas/: __init__.py  schedule.py  search.py
