[project]
name = "rtu-mirea-schedule-api"
version = "0.1.0"
description = "REST API для расписания РТУ МИРЭА"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.0,<3.0",
    "icalendar>=6.0,<7.0",
    "recurring-ical-events>=3.0,<4.0",
    "cachetools>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
